--- a/templates/mi_perfil.html
+++ b/templates/mi_perfil.html
@@ -67,7 +67,7 @@
                         <a href="{{ url_for('mi_perfil') }}" class="active">
                             <i class="fas fa-user"></i> Mi Perfil
                         </a>
-                        <a href="{{ url_for('mis_servicios') }}">
+                        <a href="{{ url_for('mi_carrito') }}">
                             <i class="fas fa-tools"></i> Mis Servicios
                         </a>
                         <a href="{{ url_for('logout') }}">
